--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -272,6 +272,10 @@ img {
   border-radius: .5rem;
 }
 
+.about__text{
+  font-size: 1.16rem;
+}
+
 /* ===== SKILLS =====*/
 .skills__container {
   row-gap: 2rem;
@@ -365,7 +369,6 @@ img {
 .contact-img>img{
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
 }
-
 
 .contact-info{
   display: flex;
